--- a/style.css
+++ b/style.css
@@ -21,6 +21,110 @@ html {
     --gray-500: #6b6b6b;
 }
 
+
+body {
+    background-color: var(--yellow);
+}
+
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100%;
+}
+
+
+.card {
+    background-color: white;
+    padding: 2.4rem;
+    border-radius: 2rem;
+    box-shadow: 
+        1rem 1rem black,
+        0 0 1px black inset;
+    border: 1px solid var(--gray-950);
+    max-width: 38.4rem;
+    min-height: 50.1rem;
+    height: 52.8rem;
+}
+
+.card-contents {
+    display: flex;
+    flex-direction: column;
+    gap: 2.4rem;
+    font-family: "Figtree", sans-serif;
+    height: 100%;
+    width: 100%;
+    position: relative;
+}
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    gap: 1.2rem;
+}
+
+.card-body > * {
+    line-height: 150%;
+}
+
+.card-body h1 {
+    font-size: 2.4rem;
+    font-weight: 800;
+}
+
+.card-body p {
+    font-size: 1.6rem;
+    color: var(--gray-500);
+}
+
+.card-body .published-date {
+    font-size: 1.4rem;
+    font-weight: 500;
+}
+
+.card-img {
+    width: 100%;
+    height: 20rem;
+    background-image: url("assets/images/illustration-article.svg");
+    border-radius: 1rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.tag {
+    border-radius: .4rem;
+    background-color: var(--yellow);
+    width: fit-content;
+    padding: .4rem 1.2rem;
+    font-weight: 800;
+}
+
+.card-footer {
+    display: flex;
+    align-items: center;
+    gap: 1.2rem;
+    justify-self: flex-end;
+    position: absolute;
+    bottom: 0;
+    color: var(--gray-950);
+}
+
+.footer-pic {
+    height: 3.2rem;
+    width: 3.2rem;
+    background-image: url("assets/images/image-avatar.webp");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.footer-name {
+    font-size: 1.4rem;
+    font-weight: 800;
+}
+
 .attribution { 
     font-size: 11px;
     text-align: center; 
